# WorkTemp

./: 0000-buildroot-external-microchip-nand-flash-fastboot-based-on-linux4microchip-2023.04.patch  0000_bootloader.patch  0000_linux_extLeds-2024.04.patch  0000_linux_lvds_480x1280-2024.10.patch  0000_sam9x60_curiosity_kernel_ili9341.patch  0000_sam9x60_curiosity_linx_t1s-2024.04.patch  0000_sam9x60_ek_kernel_ili9341.patch  0000patch  CMakeLists.txt  HowTo.txt  SwiftMessageBox.txt  amc21_can.c  at91-sam9x60_curiosity.dts  at91-sam9x60_curiosity_T1S.dts  at91-sam9x75_curiosity.dts  blayer.conf  change iTune backup location.txt  doit.bat  ili9225.ino  line_notify.sh  linux-9x75-lvds-based-sam9x7-early-1.0-rc2.patch  main.cpp  main_eLock.c  motorcycledash.cpp  pwmSendRaw.ino  temp.7z  temp.c  test.txt
